# quickbeam

./: .gitignore  1_REPORT-2026-07-16.md  2_REPORT-2026-07-16.md  CC_Fangorn.md  CLAUDE.md  DO_NOT_BUILD_LOCAL.md  DO_THIS_TOMORROW.md  EVENTS_GUIDE.md  NEW_PLAN.md  OSM_ENHANCE_INVESTIGATE.md  PLACES_GUIDE.md  README.md  REFACTOR_PLAN.md  REPORT-2026-07-16.md  REPORT-2026-07-17.md  REPORT.md  biz_links.json  cleanup_pinata.sh  cycle_analyze.py  cycle_assets.py  cycle_check_out.py  cycle_cid.py  cycle_final.py  cycle_flow.py  cycle_flowcheck.py  cycle_gen_signals.py  cycle_lowvol.py  cycle_meta.py  cycle_ring.py  cycle_ring2.py  cycle_scan.py  cycle_verify.py  cycle_write.py  cycle_write_live.py  cycle_write_signals.py  domains.json  eagle_river_places.jsonl  eagle_river_places_shotskis.jsonl  events.jsonl  fangorn-8009660693873684-2026-06-16-22-11-57.snapshot.gz.manifest.json  (+15 more)
cdn/: catalog.json
cdn-oakcliff/: catalog.json
cdn-oakcliff/places/: manifest.json
cdn/bars/: manifest.json
cdn/music/: manifest.json
cdn/places/: manifest.json
cdn/venues/: manifest.json
docs/: EVENTS_GUIDE.md  FANGORN_TO_SOND3R.md  FUSING_SOURCES.md  GOTCHAS.md  LIVE_SEMANTIC_CDN.md  LOCAL_DISCOVERY_GUIDE.md  MCP_QUICKSTART.md  NEW_QUICKSTART.md  OSM_ENHANCE_INVESTIGATE.md  PIPELINE_STAGES.md  PLACES_GUIDE.md  PUBLISHING_SDK_GUIDE.md  QUICKSTART.md  REBUILD_FROM_ZERO.md  ROBINHOOD.md  SCRAPER_HARNESS.md  SCRAPER_HARNESS_AUTHORING.md  SEMANTIC_CDN.md  SOCIAL_ROADMAP.md
example-alpaca-source/: README.md  pyproject.toml
example-alpaca-source/cdn/: catalog.json
example-alpaca-source/cdn/alpaca/: edges.json  manifest.json
example-alpaca-source/quickbeam_alpaca/: __init__.py  source.py
example-alpaca-source/quickbeam_alpaca.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
example-alpaca-source/tests/: test_alpaca.py
example-robinhood-source/: README.md  pyproject.toml
example-robinhood-source/quickbeam_robinhood/: __init__.py  source.py
example-robinhood-source/quickbeam_robinhood.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
example-robinhood-source/tests/: test_robinhood.py
examples/: .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
examples/cc/: 1_grants.json  generic_recipes.json  grants.sh  notes.md  recipes.json  recipes.sh  routes.json  routes_digikey.json  routes_generic.json  routes_grants.json  routes_recipes.json  with_cocktail_contessa_recipes.json
examples/cc/extractors/: digikey_products.py  generic_structured.py  grant_extractor.py  recipe_extractor.py  sample_extractor.py
examples/docs/: DESIGN.md  LANGUAGE.md
examples/public/: _redirects  domain.json
examples/public/music_schemas/: fangorn.mb.area.v4.json  fangorn.mb.creativecore.v4.json  fangorn.mb.instrument.v4.json  fangorn.mb.recording.v4.json  fangorn.mb.releasegroup.v4.json  fangorn.mb.work.v4.json  fangorn_schemas.json
examples/public/schemas/: fangorn.mb.area.v3.json  fangorn.mb.artist.v3.json  fangorn.mb.artist.v4.json  fangorn.mb.creativecore.v3.json  fangorn.mb.event.v3.json  fangorn.mb.event.v4.json  fangorn.mb.instrument.v3.json  fangorn.mb.place.v3.json  (+16 more)
examples/scripts/: stage-cdn.mjs
examples/src/: App.module.css  App.tsx  index.css  main.tsx
old_stage_volumes/: bishop_arts_events_raw.jsonl  oak_cliff_events_raw.jsonl  volume_1_business.json  volume_1_categories.json  volume_1_edges.json  volume_1_localities.json  volume_1_reviewers.json  volume_1_reviews.json  volume_2_edges.json  volume_2_event.json  volume_2_event_categories.json  volume_2_event_localities.json  volume_2_organizer.json  volume_3_osm_businesses.json  volume_3_osm_categories.json  volume_3_osm_edges.json  volume_3_osm_lakes.json  volume_3_osm_landmarks.json  volume_3_osm_localities.json  volume_3_osm_trails.json  volume_5_osm_businesses.json  volume_5_osm_categories.json  volume_5_osm_edges.json  volume_5_osm_lakes.json  volume_5_osm_landmarks.json  volume_5_osm_localities.json  volume_5_osm_trails.json  volume_6_edges.json  volume_6_event_localities.json  volume_6_events.json  volume_6_organizers.json
old_stage_volumes/schemas/: fangorn.places.business.0.json  fangorn.places.category.0.json  fangorn.places.eagleriver-localcore.0.json  fangorn.places.event.0.json  fangorn.places.lake.0.json  fangorn.places.landmark.0.json  fangorn.places.locality.0.json  fangorn.places.organizer.0.json  fangorn.places.review.0.json  fangorn.places.reviewer.0.json  fangorn.places.trail.0.json  fangorn_schemas.json
playground/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
playground/server/: README.md  index.mjs  package-lock.json  package.json
playground/src/: App.tsx  styles.css
python/: README.md  bundle_join.py  embeddings.py  migrate.py  requirements.txt  server.py  test_roles.py
quickbeam/: __init__.py  _identity.py  cdn.py  cli.py  embeddings.py  export_bundle.py  fangorn_publish.py  goodlog.md  mcp_payments.py  mcp_server.py  migrate.py  objects.py  profiles.example.json  publish.py  pull.py  roles.py  scraper_service.py  server.py  test_mcp_analytics.py  test_mcp_ann.py  test_objects.py  watcher.py  x402.py
quickbeam.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
quickbeam/crawl/: __init__.py  cmon.py  config.py  discover.py  freeindex.py  materialize.py  pipeline.py  sandbox.py  transform.py
quickbeam/ingest/: __init__.py  build.py  checkpoint.py  commits.py  embed.py  identity.py  umap.py
quickbeam/pipelines/: cmoncrawl.py  events.py  events_pg.py  fangorn_schema.py  gem.py  linkgen.py  mb.py  mb_pg.py  osm.py  places.py  places_pg.py  prebake.py  robinhood.py  test_robinhood.py
schemas/: crawl_job.json  webpage.json
src/: index.ts  pin.mjs  pinata.mjs  publish.mjs
test_data/: schema.json
tests/: test_cdn_edges.py  test_crawl.py  test_mcp.py  test_roles.py  test_schemagen_identity.py  test_scraper_payment.py  test_view_fusion.py  test_x402_agent.py
tests/fixtures/: commit.canonical.txt  commit.fixture.json
(+133 files in other folders)
