[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "quickbeam"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp",
    "certifi",
    "fastapi",
    "httpx",
    "musicbrainzngs",
    "numpy",
    "psycopg[binary]",
    "qdrant-client",
    "requests",
    "tqdm",
    "typer",
    "umap-learn",
    "uvicorn[standard]",
]

[project.optional-dependencies]
# Install one of these depending on your hardware:
#   pip install -e ".[gpu]"   — CUDA-accelerated embeddings (default for build)
#   pip install -e ".[cpu]"   — CPU-only fallback
gpu = ["fastembed-gpu"]
cpu = ["fastembed"]
# Agent / payments layer: MCP server (FastMCP) + x402 EIP-712 payment signing.
agent = ["fastmcp", "eth-account", "httpx"]
dev   = ["pytest", "fastmcp", "eth-account"]

[project.scripts]
quickbeam = "quickbeam.cli:app"

# Pluggable ingestion sources — each entry becomes a `quickbeam data <name>` command
# (see quickbeam/ingest/scrapers). A third-party package registers its own scraper by
# adding an entry to this group; `discover_sources()` picks it up automatically. These
# in-tree entries mirror the built-in registry so a plain `pip install -e .` wires them
# through the same discovery path an external package uses.
[project.entry-points."quickbeam.sources"]
robinhood = "quickbeam.ingest.scrapers.robinhood:RobinhoodSource"
osm       = "quickbeam.ingest.scrapers.osm:OsmSource"
eventspg  = "quickbeam.ingest.scrapers.events:EventsSource"
placespg  = "quickbeam.ingest.scrapers.places:PlacesSource"

[tool.setuptools.packages.find]
where = ["."]
include = ["quickbeam*"]
